Added support for libvirt authentication

--- a/src/vmm-open-connection.glade
+++ b/src/vmm-open-connection.glade
@@ -180,6 +180,7 @@
 	    <widget class="GtkComboBox" id="connection">
 	      <property name="visible">True</property>
 	      <property name="items" translatable="yes">Local
+Remote Password or Kerberos
 Remote SSL/TLS with x509 certificate
 Remote tunnel over SSH</property>
 	      <property name="add_tearoffs">False</property>
